# plink-ng

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: plink2_adjust.h  plink2_cmdline.h  plink2_common.h  plink2_compress_stream.h  plink2_data.h  plink2_decompress.h  plink2_export.h  plink2_export_legacy.h  plink2_family.h  plink2_pvar.h
src/: CMakeLists.txt  plink2_adjust.cc  plink2_cmdline.cc  plink2_common.cc  plink2_data.cc  plink2_export.cc
zstd/: CMakeLists.txt
